<resources>
    <string name="app_name">Weather</string>
    <string name="title">Forecast Research</string>
    <string name="street">Please enter your street</string>
    <string name="city">Please enter your city</string>
    <string name="search">SEARCH</string>
    <string name="clear">CLEAR</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="degree">Degree</string>
    <string name="about">About</string>
    <string name="name">Name: Wenxian Zhang</string>
    <string name="ID">Student ID: 4747011593</string>
    <string-array name="state">
        <item>Select</item>
        <item>Alabama,AL</item>
        <item>Alaska,AK</item>
        <item>American Samoa,AS</item>
        <item>Arizona,AZ</item>
        <item>Arkansas,AR</item>
        <item>California,CA</item>
        <item>Colorado,CO</item>
        <item>Connecticut,CT</item>
        <item>Delaware,DE</item>
        <item>District of Columbia,DC</item>
        <item>Florida,FL</item>
        <item>Georgia,GA</item>
        <item>Guam,GU</item>
        <item>Hawaii,HI</item>
        <item>Idaho,ID</item>
        <item>Illinois,IL</item>
        <item>Indiana,IN</item>
        <item>Iowa,IA</item>
        <item>Kansas,KS</item>
        <item>Kentucky,KY</item>
        <item>Louisiana,LA</item>
        <item>Maine,ME</item>
        <item>Maryland,MD</item>
        <item>Massachusetts,MH</item>
        <item>Michigan,MI</item>
        <item>Micronesia,FM</item>
        <item>Minnesota,MN</item>
        <item>Mississippi,MS</item>
        <item>Missouri,MO</item>
        <item>Montana,MT</item>
        <item>Nebraska,NE</item>
        <item>Nevada,NV</item>
        <item>New Hampshire,NH</item>
        <item>New Jersey,NJ</item>
        <item>New Mexico,NM</item>
        <item>New York,NY</item>
        <item>North Carolina,NC</item>
        <item>North Dakota,ND</item>
        <item>Northern Marianas Islands,MP</item>
        <item>Ohio,OH</item>
        <item>Oklahoma,OK</item>
        <item>Oregon,OR</item>
        <item>Palau,PW</item>
        <item>Pennsylvania,PA</item>
        <item>Puerto Rico,PR</item>
        <item>Rhode Island,RI</item>
        <item>South Carolina,SC</item>
        <item>South Dakota,SD</item>
        <item>Tennessee,TN</item>
        <item>Texas,TX</item>
        <item>Utah,UT</item>
        <item>Vermont,VT</item>
        <item>Virginia,VA</item>
        <item>Virgin Islands,VI</item>
        <item>Washington,WA</item>
        <item>West Virginia,WV</item>
        <item>Wisconsin,WI</item>
        <item>Wyoming,WY</item>
    </string-array>
    <string name="title_activity_result">ResultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="detai">MORE DETAILS</string>
    <string name="map">VIEW MAP</string>
    <string name="pre">Precipitation</string>
    <string name="rain">Chance of Rain</string>
    <string name="wind">Wind Speed</string>
    <string name="dew">Dew Point</string>
    <string name="hum">Humidity</string>
    <string name="vis">Visibility</string>
    <string name="rise">Sunrise</string>
    <string name="set">Sunset</string>
    <string name="loading">Loading...</string>
    <string name="detail_city">More Details for Los Angeles, CA</string>
    <string name="next24">NEXT 24 HOURS</string>
    <string name="next7">NEXT 7 DAYS</string>
    <string name="time_title">Time</string>
    <string name="sum">Summary</string>
    <string name="facebook_app_id">1653075681601449</string>
    <string name="title_activity_maps">Map</string>
    <string name="aeris_client_id">55w4kWIUAxOfZ0noDqt9b</string>
    <string name="aeris_client_secret">6UmCh0CicdwoKBVcngxIFPzE7x8yATDyOzNJ5Oq8</string>
</resources>
